docs/versioned_docs/version-0.16.0/tuning.md
---
title: Performance Tuning
description: "Tune Juno's database and compilation settings for faster sync and lower resource use."
---

It is important for full nodes to scale accordingly to the hardware where they are being executed. To unlock this, the following are a list of configurations users can update based on their hardware specs to maximize the performance of their Juno node.

The default values of each of these options are set to maximize performance with a machine that matches Juno's minimum requirements – described in the **Hardware Requirement** section.

## Database Compression

Set by the `--db-compression` flag, it applies a compression algorithm over the database **every time** Juno writes to it.

Available options:

- `snappy`: Fast compression with a low compression ratio
- `zstd`: Slower but reduces storage quite a lot
- `minlz`: Alternative compression option

Depending on the compression algorithm used it becomes a trade-off between **disk space** and **CPU** usage every time there is a disk operation.

We recommend `zstd` because it is fast enough that it doesn't delay any process significantly while providing huge database size reduction.

:::info
Note that once the compression is changed the new database is not compressed immediately, but gradually through the node usage by writing new information.
:::

:::info
There is a secret `zstd1` option that provides far greater performance than `zstd` but we are still testing it out and it might become the default later.
:::

## Database Memory Table Size

Set by the `--db-memtable-size` flag (default: 256 MB), this controls the amount of memory allocated for the database memtable. The memtable is an in-memory buffer where writes are stored before being flushed to disk.

A sensible default is **256 MB** for nodes that satisfy the minimum requirements. Increasing this value reduces the frequency of disk flushes, which can improve write throughput during sync.

:::warning
Setting this value too high can cause **uneven write performance**. Larger memtables mean flushes happen less frequently but involve more data at once, leading to bursty I/O patterns. If writes accumulate faster than the database can flush, writes will stall entirely until flushing catches up. A moderate value like 256 MB balances flush frequency with I/O smoothness.
:::

## Database Memory Table Count

Set by the `--db-memtable-count` flag (default: 2), this controls the number of memtables the database can hold in memory before stalling writes. Memtables are in-memory buffers where writes accumulate before being flushed to disk.

With the default of 2, Pebble can accept writes into one memtable while flushing a previous one to disk. Increasing this value allows more memtables to be queued, which can absorb write bursts and prevent stalls when flush speed falls behind write speed.

:::warning
Each additional memtable consumes up to `--db-memtable-size` MB of memory. For example, with the default memtable size of 256 MB and a count of 4, up to 1 GB of memory could be used for memtables alone.
:::

## Database Compaction Concurrency

Set by the `--db-compaction-concurrency` flag, this controls how many concurrent compaction workers the database uses. Compaction is the background process that merges and optimises data on disk.

Format options:

- `N`: Sets the range from 1 to N workers (e.g., `--db-compaction-concurrency=4`)
- `M,N`: Sets the range from M to N workers (e.g., `--db-compaction-concurrency=2,8`)

The default is `1,GOMAXPROCS/2` (half of available CPU cores). Increasing the upper bound on systems with many cores can speed up compaction as well as increase CPU resources usage while syncing parts of the network where there was a lot of usage.

:::info
Note that this effectively improve syncing speed while behind the tip of the chain but after reaching the latest block resource usage will gradually reduce back to minimums.
:::

## Database Cache Size

Set by the `--db-cache-size` flag (default: 1024 MB), this determines the amount of memory allocated for caching frequently accessed data from the database.

A larger cache reduces disk reads and improves query performance. On systems with ample memory, increasing this value (e.g., 2048 or 4096 MB) can significantly improve RPC response times and overall node performance.

## Sierra Compilation Limits

Juno compiles Sierra classes to CASM in isolated child processes. The flags below cap the resources each compilation uses and how many run at once.

### Per-compilation limits

:::warning
These limits are enforced by the kernel and only on **Linux**. On other operating systems they have no effect.
:::

Two flags cap the resources each compilation process may use, protecting the node from malicious classes that would otherwise consume CPU and memory without bound:

- `--max-compilation-memory` (default: 4096 MB): Maximum virtual memory (address space) a single compilation process may use. A compilation exceeding it is aborted.
- `--max-compilation-cpu-time` (default: 10 seconds): Maximum CPU time a single compilation process may consume. A compilation exceeding it is killed.

Setting either flag to `0` disables that limit. The defaults are generous for legitimate classes and only need raising if genuine compilations are being aborted.

:::info
The CPU time limit counts seconds of CPU actually consumed by the compilation process, not elapsed wall-clock time, so it is unaffected by how busy the rest of the machine is.
:::

### Compilation concurrency

- `--max-concurrent-compilations`(default: unset): controls how many compilations run at once. Any non-negative integer is used directly (`0` disables compilations). Left unset (the default), Juno derives a safe value so concurrent compilations cannot exhaust RAM:

```
limit = min((available_memory - node_memory_reserve) / max_compilation_memory, cpu_cores), at least 1.
```
 
- `--max-compilation-queue` (default: unset): How many requests wait once the concurrency limit is reached before new ones are rejected. Unset uses twice the concurrency limit (`0` disables the queue).

- `--node-memory-reserve` (default: 4096 MB): Memory kept for the rest of the node, excluded from the compilation budget.

The available memory respects container limits (cgroups), so inside a memory-capped container the value reflects the container, not the host. On non-Linux, where the per-compilation memory limit does not apply, the limit is simply the CPU core count.

The default limit is always at least 1: on a memory-tight node compilations, it runs one at a time rather than the node refusing to start.
